--- a/lib/murad_web/templates/layout/root.html.heex
+++ b/lib/murad_web/templates/layout/root.html.heex
@@ -14,9 +14,9 @@
       <section class="container">
         <nav>
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
             <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
+              <span><%= link "New Loan", to: Routes.loan_path(@conn, :new) %></span>
+              <span><%= link "New User", to: Routes.user_path(@conn, :new) %></span>
             <% end %>
           </ul>
         </nav>
